# research-os-agent

./: .venv  Makefile  README.md  client-version.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/: release.yml
.github/workflows/: ci.yml  deploy-mcp.yml  release.yml
deploy/mcp/: Dockerfile  README.md  k8s.yaml
docs/: 2026-07-11-v0.4-foldin-client-upgrade-plan.md  2026-07-11-v0.4-foldin-phase2-spec.md  2026-07-12-dashboard-install-instructions.md  2026-07-12-oauth-design.md  2026-07-12-plugin-and-mcp-hosting-spec.md  2026-07-15-harbor-native-ownership-plan.md  2026-07-22-harbor-export-ledger.md  2026-07-23-sandbox-state-capture.md
evals/instructions/: README.md  run.py  score.py  tasks.yaml
fixtures/rl_offpolicy/: README.md  env.py  train.py
plugins/probe-research/: .mcp.json  README.md
plugins/probe-research-tap/: README.md  pyproject.toml
plugins/probe-research-tap/.claude-plugin/: plugin.json
plugins/probe-research-tap/hooks/: session-end.sh  session-start.sh
plugins/probe-research-tap/tap/: __init__.py  __main__.py  config.py  httpclient.py  killswitch.py  main.py  outbox.py  pair.py  revoke.py  sanitize.py  status.py  storage.py  transcript.py
plugins/probe-research-tap/tests/: test_base_url.py  test_batch_seq_persist.py  test_cadence.py  test_device_id.py  test_halt_latch.py  test_httpclient.py  test_killswitch.py  test_lifecycle.py  test_pair_repair.py  test_sanitize.py
plugins/probe-research/.claude-plugin/: plugin.json
plugins/probe-research/commands/: probe-research-setup.md
plugins/probe-research/hooks/: session-start.sh  version_check.py
plugins/probe-research/skills/manage-research-asset/: SKILL.md
plugins/probe-research/skills/manage-research-asset/agents/: openai.yaml
plugins/probe-research/skills/publish-experiment/: SKILL.md
plugins/probe-research/skills/track-experiment/: SKILL.md
plugins/research-os/: .mcp.json  README.md
plugins/research-os/.claude-plugin/: plugin.json
plugins/research-os/commands/: research-os-setup.md
plugins/research-os/skills/experiment/: SKILL.md
plugins/research-os/skills/experiment/agents/: openai.yaml
plugins/research-os/skills/manage-research-asset/: SKILL.md
plugins/research-os/skills/publish-experiment/: SKILL.md
plugins/research-os/skills/publish-experiment/agents/: openai.yaml
plugins/research-os/skills/track-experiment/agents/: openai.yaml
schema/: openapi.json
scripts/: build-sandbox-snapshot.sh  dump_openapi.py  gen_models.py
skills/experiment/: SKILL.md
skills/manage-research-asset/: SKILL.md
skills/publish-experiment/: SKILL.md
skills/track-experiment/: SKILL.md
src/probe/: __init__.py  capture.py  client.py  client_headers.py  config.py  models.py  run.py  snapshot.py  spool.py  transport.py
src/probe/_generated/: models.py
src/probe/cli/: __init__.py  _watch.py  main.py  updater.py
src/probe/connectors/: __init__.py  atif.py  harbor.py  harbor_export.py  sandbox_state.py
src/probe/connectors/_bin/: sandbox-snapshot-linux-amd64  sandbox-snapshot-linux-arm64
src/probe/integrations/: __init__.py  miles.py
src/probe/mcp/: __init__.py  contract.py  server.py  service.py  source.py
src/probe/sdk/: __init__.py  assets.py  capture.py  client.py  config.py  defaults.py  device.py  durable.py  errors.py  events.py  hashing.py  run.py  snapshot.py  spool.py  surface.py  transport.py
src/ros/: __init__.py  client.py  config.py  errors.py  models.py  run.py  snapshot.py  spool.py  transport.py
src/ros/_generated/: models.py
src/ros/cli/: __init__.py  main.py
src/ros/mcp/: __init__.py  server.py  service.py  source.py
src/ros/sdk/: __init__.py  assets.py  client.py  config.py  device.py  errors.py  events.py  run.py  sessions.py  snapshot.py  spool.py  transport.py
tests/: conftest.py  test_atif_expansion.py  test_backend_caps.py  test_capture_ledger.py  test_cli.py  test_client_version_headers.py  test_config_contexts.py  test_deploy_scope.py  test_device_login.py  test_eval_harness.py  test_harbor_connector.py  test_harbor_export.py  test_lifecycle.py  test_mcp.py  test_mcp_hosted.py  test_mcp_oauth_discovery.py  test_mcp_token.py  test_mcp_tool_layer.py  test_mcp_views.py  test_miles_integration.py  test_onboarding.py  test_parity.py  test_plugin_headers_helper.py  test_review_regressions.py  test_run_heartbeat.py  test_sandbox_state.py  test_sdk.py  test_skills_sync.py  test_snapshot.py  test_spool_durability.py  test_surfaces.py  test_update_cmd_min.py  test_updater.py  test_workspace_project.py
tests/fixtures/atif/: README.md  synthetic-subagent.trajectory.json
tools/sandbox-snapshot/: go.mod  main.go  main_test.go
