[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-os-agent"
version = "0.1.0"
description = "CLI + SDK client for research-os (Probe experiment tracking). Emits to the v3 ingestion contract."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "mcp>=1.23,<2",
    "typer>=0.12",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    # Regenerates src/ros/_generated/models.py from schema/openapi.json.
    # See `make gen-models` / scripts/gen_models.py.
    "datamodel-code-generator>=0.25",
]

[project.scripts]
exp = "ros.cli:main"
research-os-mcp = "ros.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ros"]

[tool.hatch.build.targets.wheel.shared-data]
"skills" = "share/research-os-agent/skills"

[tool.hatch.build.targets.sdist]
include = ["src/ros", "skills", "tests", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
