[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probe-agent"
version = "0.5.0"
description = "CLI + SDK + read-only MCP client for Probe Research (experiment tracking)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Probe", email = "team@prbe.ai" }]
keywords = ["mlops", "experiment-tracking", "reinforcement-learning", "mcp", "probe-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.23,<2",
    "typer>=0.12",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    # Regenerates src/probe/_generated/models.py from schema/openapi.json.
    # See `make gen-models` / scripts/gen_models.py.
    "datamodel-code-generator>=0.25",
]
# Extra needed only to RUN the hosted HTTP MCP service (not for stdio/CLI users).
mcp-http = ["uvicorn>=0.30"]

[project.urls]
Homepage = "https://github.com/prbe-ai/research-os-agent"
Repository = "https://github.com/prbe-ai/research-os-agent"

[project.scripts]
probe = "probe.cli:main"
probe-research-mcp = "probe.mcp.server:main"
probe-research-mcp-http = "probe.mcp.server:main_http"

[tool.hatch.build.targets.wheel]
packages = ["src/probe"]

[tool.hatch.build.targets.wheel.shared-data]
"skills" = "share/probe-agent/skills"

[tool.hatch.build.targets.sdist]
include = ["src/probe", "skills", "tests", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
